# hdfdict

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.bat  setup.py  testresults.txt
hdfdict/: __init__.py  hdfdict.py
tests/: test_hdfdict.py
