[tool.poetry]
name = "hdfdict"
version = "0.4.1"
description = "Helps h5py to load and dump dictionaries containing types supported by h5py."
authors = ["Siegfried Gündert <siegfried.guendert@googlemail.com>"]
license = "MIT"

readme = 'README.md'
homepage = 'https://github.com/SiggiGue/hdfdict'
repository = 'https://github.com/SiggiGue/hdfdict'


[tool.poetry.dependencies]
python = "^3.7"
h5py-wrapper = "^1.1"
pyyaml = ">=5.1"

[tool.poetry.dev-dependencies]
pytest-cov = ">=2.7"
pytest = ">=5.1"
pylint = ">=2.3"
pytest-assume = ">=2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
